tests/bad/try_expr.glaz
fn x() ! {
	raise "error";
}

fn x2() !i32 {
	raise "error";
}

fn main() {
	x();
	_ = try x2() catch {};
}
